<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ui.ResetPasswordActivity">

    <EditText
        android:id="@+id/ResetMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textEmailAddress"
        android:hint="@string/ResetMail"
        android:autofillHints="emailAddress"
        android:fontFamily="@font/dolomanpavljenko"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginTitleActivity" />

    <Button
        android:id="@+id/ResetSendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:padding="7dp"
        android:fontFamily="@font/dolomanpavljenko"
        android:text="@string/ResetSendMail"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResetMail" />



    <TextView
        android:id="@+id/LoginTitleActivity"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/ResetPasswordTitle"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/dolomanpavljenko"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogin" />

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reset"
         />
</androidx.constraintlayout.widget.ConstraintLayout>